updated EN text

--- a/backend/src/templates/new_member_email.html
+++ b/backend/src/templates/new_member_email.html
@@ -46,7 +46,7 @@ För labbmedlemmar så är lokalen öppen dygnet runt, året runt, men för att 
 </p>
 
 <h3>Jag är jätteduktig på en sak. Får jag hålla kurs i saken?</h3>
-<p>Absolut. Emaila styrelsen på <a href="mailto:info@makerspace.se">info@makerspace.se</a> så pratar vi upplägg, anmälan och sätter in kursen i kalendariet. Kanske kolla av intresse genom att posta om saken i Facebookgruppen först?</p>
+<p>Absolut! Emaila styrelsen på <a href="mailto:info@makerspace.se">info@makerspace.se</a> så pratar vi upplägg, anmälan och sätter in kursen i kalendariet. Kanske kolla av intresse genom att posta om saken i Facebookgruppen först?</p>
 
 <h3>Mitt labbmedlemskap håller på att ta slut, måste jag komma förbi igen och aktivera taggen?</h3>
 <p>Nej. Har du redan tagg så behöver du inte infinna dig på spacet. Vi hanterar uppdateringen av din tagg per distans.</p>
@@ -91,15 +91,8 @@ För labbmedlemmar så är lokalen öppen dygnet runt, året runt, men för att 
 <li><a href="https://boka.se/laser">Boka laserskäraren</a></li>
 <li><a href="https://wiki.makerspace.se/Slack">Slack</a> med flera kanaler, inkl Events, Trärummet och vissa maskiner.</li>
 <li>Publik <a href="http://fb.com/Stockholm.Makerspace">Facebook-sidan</a> (används inte så mycket).
+<li>Frågor direkt till styrelsen skickas till <a href="mailto:info@makerspace.se">info@makerspace.se</a>.</li>
 </ul>
-
-<p>
-Om du har ytterligare frågor eller funderingar så hittar du säkert svar på vår wiki (<a href="https://wiki.makerspace.se/">wiki.makerspace.se</a>) eller i vår FAQ (<a href="https://wiki.makerspace.se/Makerspace_FAQ">wiki.makerspace.se/Makerspace_FAQ</a>).
-</p>
-
-<p>
-Frågor direkt till styrelsen skickas till <a href="mailto:info@makerspace.se">info@makerspace.se</a>.
-</p>
 
 <p>
 Bästa hälsningar,<br/>
@@ -110,53 +103,80 @@ Styrelsen i Stockholm Makerspace<br/>
 ----------------------------------------------------------------------------
 
 <p>ENGLISH</p>
-<p>
-Welcome to Stockholm Makerspace. Stockholm Makerspace is an NGO run completely on a voluntary basis, meaning that no one in our organisation gets paid to work here. If you find anything that needs improving or development, then you are warmly welcome to join us in running our community.
+
+<p>Welcome to the Stockholm Makerspace! You are now a part of Sweden's largest independent makerspace. We work together to remain an independent and member-driven tech haven for community and creation.</p>
+
+<p>Everything at Stockholm Makerspace is built, bought, transported, and renovated by members like you and me. No one gets a salary and we get no grants. The reason why we can pay the rent is that we are many who help out by paying membership dues. It's amazing what people can create together. If you think there is something that can be developed then you are most welcome to get involved in the operation of our association.</p>
+
+<p>As a new member, you probably have a lot of questions about the Stockholm Makerspace. In this email you'll find the info you need to answer most, if not all, of your questions, so please read this email carefully!
 </p>
 
-<p>
-<b>Member info</b><br/>
-Name: {{member.firstname}} {{member.lastname}}<br/>
+<h3>Member info</h3>
+<p>Name: {{member.firstname}} {{member.lastname}}<br/>
 Email: {{member.email}}<br/>
 Membership number: {{member.member_number}}<br/>
 </p>
 
-<p>
-We’ll use this email if we need to reach you. Therefore it’s important that you ensure that it works, or notify us regarding new email info. Your membership number is used for our database, and you’ll need it to sign up for courses and workshops.
-</p>
+<p>We’ll use this email if we need to reach you. Therefore it’s important that you ensure that it works, or notify us regarding new email info. Your membership number is used for our database, and you’ll need it to sign up for courses and workshops.</p>
 
-<p>
-As a new member, you probably have a lot of questions about Stockholm Makerspace. In this email you'll find the info you need to answer most, if not all, of your questions, so please read this email carefully!
-</p>
+<h3>TWO TYPES OF MEMBERSHIP</h3>
+<p><b>Base membership</b><br/>
+As member in the organisation you’re welcome to attend our events and workshops, as well as vote at the annual meeting. If you wish to do independent projects on your own on the premises, you need to become a lab member.</p>
 
-<h2>COMMUNICATION CHANNELS</h2>
-<p>
-Two channels of communication are in use for official affairs: Facebook and newsletters (the latter is infrequently used). We have one public Facebook page (<a href="https://facebook.com/stockholm.makerspace/">facebook.com/stockholm.makerspace</a>) and one Facebook group for members (<a href="https://facebook.com/groups/makerspace.se">facebook.com/groups/makerspace.se</a>). Follow us and contribute your unique know-how to discussions! We’re also on Slack (<a href="https://wiki.makerspace.se/Slack">wiki.makerspace.se/Slack</a>).
-</p>
+<p><b>Lab membership</b><br/>
+The premises are open 24/7 for lab members, all year long, but to start gaining access you need to get a key fob. Key handouts occur approximately every two weeks, and they’re called "nyckelutlämning" in our calendar (<a href="https://makerspace.se/kalendarium">makerspace.se/kalendarium</a>). To check out a key you need to sign an agreement where you agree to adhere to our rules (<a href="https://wiki.makerspace.se/Rules_for_Makerspace">wiki.makerspace.se/Rules_for_Makerspace</a>), and you also need to show an ID.</p>
 
-<h2>TWO TYPES OF MEMBERSHIP</h2>
-<p>
-<b>Base membership</b><br/>
-As member in the organisation you’re welcome to attend our events and workshops, as well as vote at the annual meeting. If you wish to do independent projects on your own on the premises, you need to become a lab member.
-</p>
+<h3>I want to go to a workhop! When is the next workshop?</h3>
+<p>All activities are run by volunteers, like you and me. We help each other learn the machines so that everyone can work independently. Share what you can, and ask for help if you get stuck. Some machines require that you have gone to a course for in order to be able to use: welding (svetsrummet), biolab, laser cutter, and resin printer. Courses are advertised in the Facebook group and can be found on the calendar. There is no queue- first come, first served.</p>
 
-<p>
-<b>Lab membership</b><br/>
-The premises are open 24/7 for lab members, all year long, but to start gaining access you need to get a key fob. Key handouts occur approximately every two weeks, and they’re called "nyckelutlämning" in our calendar (<a href="https://makerspace.se/kalendarium">makerspace.se/kalendarium</a>). To check out a key you need to sign an agreement where you agree to adhere to our rules (<a href="https://wiki.makerspace.se/Rules_for_Makerspace">wiki.makerspace.se/Rules_for_Makerspace</a>), and you also need to show an ID.
-</p>
+<h3>I'm really good at something. Can I lead a workshop?</h3>
+<p>Absolutely! Email the board at <a href="mailto:info@makerspace.se">info@makerspace.se</a> to talk about the set up, creating a sign-up, and posting the course in the calendar. Perhaps check if other members are interested by posting about it in the Facebook group first?</p>
 
-<h2>COURSES</h2>
-<p>
-Some of our equipment requires that you participate in a course prior to use. There are no exceptions! Courses are announced in our members’ group on Facebook as well as in the calendar.
-</p>
+<h3>My lab membership is running out, do I have to come in person again to activate the tag?</h3>
+<p>No. If you already have a tag, you do not need to come to a "nyckelutlämning" again. Your tag will be updated from our side.</p>
 
-<p>
-If you have further questions, you’re likely to find your answer on our wiki (<a href="https://wiki.makerspace.se/">wiki.makerspace.se</a>) or in the FAQ (<a href="https://wiki.makerspace.se/Makerspace_FAQ,_English">wiki.makerspace.se/Makerspace_FAQ,_English</a>).
-</p>
+<h3>When should I pay for more lab membership so I don't get locked out?</h3>
+<p>Look for the next "nyckelutlämning" in the calendar. If you pay for lab membership before then, the lab months you purchase will be added to your current lab time. Our key delivery system is under development by our members, but for now we cannot provide or update keys with a higher frequency than every other week.</p>
 
-<p>
-If you have questions for the board, email us at <a href="mailto:info@makerspace.se">info@makerspace.se</a>.
-</p>
+<h3>What is my member number, is my tag active, and how long is my tag active?</h3>
+<p>Check out <a href="https://medlem.makerspace.se/">your member page</a>.</p>
+
+<h3>I would like to have certain tool/thing. Can I buy that thing?</h3>
+<p>Purchases for the organization should be democratic as much as possible. Unfortunately, we only have 300m2 of space and it is packed with things, so donations and purchases must be approved by the board before purchasing and transport to the premises. If you want to get compensation for expenses that are made for our common machine park then you need to have the purchase approved by a board member or room manager before purchasing. Save the purchase receipt so that our treasurer can handle the accounting. In the case of more expensive purchases, the Board needs to meet to make a joint decision before a purchase can be made. You can also write down what you want on our <a href="https://wiki.makerspace.se/%C3%96nskelista">wishlist ("önskelista")</a>.</p>
+
+<h3>Can I make a prototype at the Stockholm Makerspace?</h3>
+<p>Yes, if there is space and if you do not sell the prototype. You also should not have formed a company yet. Stockholm Makerspace is a non-profit association. In order to be able to continue like this, we must not conduct commercial activities. This means that you are not allowed to make products for sale.</p>
+
+<h3>Is it true I can keep my own storage box here?</h3>
+<p>Yes! Purchase your own storage box of size 50x39x26 cm (32L). Label it with your name and member number and find a place for it on the shelves in the corridor. Boxes can be purchased at places like <a href="https://www.clasohlson.com/se/F%C3%B6rvaringsl%C3%A5da-SmartStore-Home/34-1552-31">Clas Ohlson</a>.</p>
+
+<h3>I'm building something a bit bigger than a storage box, can I still store it here?</h3>
+<p>If there is space available, you can place your project on the hall shelves for a maximum of 3 months. Your project should be marked with date, membership number and name, otherwise it will disappear. We have room for purchased sheets of plywood, acrylic and the like opposite the laser cutter in the workshop room.</p>
+
+<h3>I left my project on a table over night and now it's gone!</h3>
+<p>You have to clean up after yourself. We have a cleaning service that we pay a considerable amount to mop floors and tables every week. But the cleaner does not touch tables with things on them, and does not clean floors where things are. It is very important that you clean up after yourself, so that we all can have a common, clean room. If you happened to leave things on a table, it might have been thrown away or moved to a Lost & Found box. Members help to empty the garbage. Ask a member if you don't know how to do it, or check out the <a href="https://wiki.makerspace.se/St%C3%A4drutiner">cleaning routines ("städrutinerna")</a>.</p>
+
+<h3>I'm hungry.</h3>
+<p>You have access to the kitchen on the entry level floor. There are microwaves and refrigerators with food for sale. Note that we can borrow the kitchen from our landlord, THINGS, as long as leave the space neat and tidy, and regularly fill and empty the dishwashers.</p>
+
+<h3>How does the Board work?</h3>
+<p>All Board members are volunteers and we meet about once per month. At the board meetings we discuss the financials, upcoming key tag nights ("nyckelutlämning"), any problems, and decide on larger purchases. If you want to contact the Board, email <a href="mailto:info@makerspace.se">info@makerspace.se</a> or come to meet us at on the first Tuesday or the month at a "LabbSnack" in the kitchen.</p>
+
+
+<h3>Ok. Where can I find out more?</h3>
+<ul>
+<li>Our <a href="http://fb.com/groups/makerspace.se/">Facebook group for members</a> is very active. There you can ask questions, ask for help, and get info about workshops.</li>
+<li>The Biolab has its own <a href="http://fb.com/groups/1540165512945860/">Facebook group</a>.</li>
+<li>In the <a href="https://www.makerspace.se/kalendarium">Calendar</a> you can see the upcoming events and "nyckelutlämningar".</li>
+<li>We send out a newsletter ("Nyhetsbrev") to every members' email (sent sporadically). You can even read these on the <a href="https://www.makerspace.se/blogg">homepage's blog</a>.</li>
+<li><a href="https://www.makerspace.se/">The homepage</a> has links, a blog, and other info.</li>
+<li><a href="https://wiki.makerspace.se">The Wiki</a> has lots of information, including <a href="https://wiki.makerspace.se/Makerspace_FAQ,_English">Makerspace FAQ</a> (frequently asked questions and answers), and <a href="https://wiki.makerspace.se/Maskiner_och_inventarier">Maskiner och inventarier</a> (a list of the tools and equipment) as well as help for each machin (like what parameters you need for different materials in the laser cutter).</li>
+<li>Buy things in our webshop <a href="https://medlem.makerspace.se/shop/">webshop</a> (renew memberships, buy material, pay for laser cutter time, etc)</li>
+<li><a href="https://boka.se/laser">Book time on the laser cutter</a></li>
+<li><a href="https://wiki.makerspace.se/Slack">Slack</a> with several channels, including Events, Trärummet and certain machines.</li>
+<li>Public <a href="http://fb.com/Stockholm.Makerspace">Facebook page</a> (not used much).
+<li>Question for the Board can be sent directly to <a href="mailto:info@makerspace.se">info@makerspace.se</a>.</li>
+</ul>
 
 <p>
 Best regards,<br/>
