--- a/backend/src/templates/new_member_email.html
+++ b/backend/src/templates/new_member_email.html
@@ -121,12 +121,12 @@ Membership number: {{member.member_number}}<br/>
 
 <h3>TWO TYPES OF MEMBERSHIP</h3>
 <p><b>Base membership</b><br/>
-As member in the organisation you’re welcome to attend our events and workshops, as well as vote at the annual meeting. If you wish to do independent projects on your own on the premises, you need to become a lab member.</p>
+As a member in the organisation you’re welcome to attend our events and workshops, as well as vote at the annual meeting. If you wish to do independent projects on your own on the premises, you need to become a lab member.</p>
 
 <p><b>Lab membership</b><br/>
 The premises are open 24/7 for lab members, all year long, but to start gaining access you need to get a key fob. Key handouts occur approximately every two weeks, and they’re called "nyckelutlämning" in our calendar (<a href="https://makerspace.se/kalendarium">makerspace.se/kalendarium</a>). To check out a key you need to sign an agreement where you agree to adhere to our rules (<a href="https://wiki.makerspace.se/Rules_for_Makerspace">wiki.makerspace.se/Rules_for_Makerspace</a>), and you also need to show an ID.</p>
 
-<h3>I want to go to a workhop! When is the next workshop?</h3>
+<h3>I want to go to a workshop! When is the next workshop?</h3>
 <p>All activities are run by volunteers, like you and me. We help each other learn the machines so that everyone can work independently. Share what you can, and ask for help if you get stuck. Some machines require that you have gone to a course for in order to be able to use: welding (svetsrummet), biolab, laser cutter, and resin printer. Courses are advertised in the Facebook group and can be found on the calendar. There is no queue- first come, first served.</p>
 
 <h3>I'm really good at something. Can I lead a workshop?</h3>
@@ -145,7 +145,7 @@ The premises are open 24/7 for lab members, all year long, but to start gaining 
 <p>Purchases for the organization should be democratic as much as possible. Unfortunately, we only have 300m2 of space and it is packed with things, so donations and purchases must be approved by the board before purchasing and transport to the premises. If you want to get compensation for expenses that are made for our common machine park then you need to have the purchase approved by a board member or room manager before purchasing. Save the purchase receipt so that our treasurer can handle the accounting. In the case of more expensive purchases, the Board needs to meet to make a joint decision before a purchase can be made. You can also write down what you want on our <a href="https://wiki.makerspace.se/%C3%96nskelista">wishlist ("önskelista")</a>.</p>
 
 <h3>Can I make a prototype at the Stockholm Makerspace?</h3>
-<p>Yes, if there is space and if you do not sell the prototype. You also should not have formed a company yet. Stockholm Makerspace is a non-profit association. In order to be able to continue like this, we must not conduct commercial activities. This means that you are not allowed to make products for sale.</p>
+<p>Yes, if there is room and if you do not sell the prototype. You also should not have formed a company yet. Stockholm Makerspace is a non-profit association. In order to be able to continue like this, we must not conduct commercial activities. This means that you are not allowed to make products for sale.</p>
 
 <h3>Is it true I can keep my own storage box here?</h3>
 <p>Yes! Purchase your own storage box of size 50x39x26 cm (32L). Label it with your name and member number and find a place for it on the shelves in the corridor. Boxes can be purchased at places like <a href="https://www.clasohlson.com/se/F%C3%B6rvaringsl%C3%A5da-SmartStore-Home/34-1552-31">Clas Ohlson</a>.</p>
@@ -170,8 +170,8 @@ The premises are open 24/7 for lab members, all year long, but to start gaining 
 <li>In the <a href="https://www.makerspace.se/kalendarium">Calendar</a> you can see the upcoming events and "nyckelutlämningar".</li>
 <li>We send out a newsletter ("Nyhetsbrev") to every members' email (sent sporadically). You can even read these on the <a href="https://www.makerspace.se/blogg">homepage's blog</a>.</li>
 <li><a href="https://www.makerspace.se/">The homepage</a> has links, a blog, and other info.</li>
-<li><a href="https://wiki.makerspace.se">The Wiki</a> has lots of information, including <a href="https://wiki.makerspace.se/Makerspace_FAQ,_English">Makerspace FAQ</a> (frequently asked questions and answers), and <a href="https://wiki.makerspace.se/Maskiner_och_inventarier">Maskiner och inventarier</a> (a list of the tools and equipment) as well as help for each machin (like what parameters you need for different materials in the laser cutter).</li>
-<li>Buy things in our webshop <a href="https://medlem.makerspace.se/shop/">webshop</a> (renew memberships, buy material, pay for laser cutter time, etc)</li>
+<li><a href="https://wiki.makerspace.se">The Wiki</a> has lots of information, including <a href="https://wiki.makerspace.se/Makerspace_FAQ,_English">Makerspace FAQ</a> (frequently asked questions and answers), and <a href="https://wiki.makerspace.se/Maskiner_och_inventarier">Maskiner och inventarier</a> (a list of the tools and equipment), as well as help for each machine (like what parameters you need for different materials in the laser cutter).</li>
+<li>Buy things in our <a href="https://medlem.makerspace.se/shop/">webshop</a> (renew memberships, buy material, pay for laser cutter time, etc).</li>
 <li><a href="https://boka.se/laser">Book time on the laser cutter</a></li>
 <li><a href="https://wiki.makerspace.se/Slack">Slack</a> with several channels, including Events, Trärummet and certain machines.</li>
 <li>Public <a href="http://fb.com/Stockholm.Makerspace">Facebook page</a> (not used much).
