Fix typo on registration page

--- a/public/src/templates/register.html
+++ b/public/src/templates/register.html
@@ -64,7 +64,7 @@
             <h3>Svenska</h3>
 
             <p>Startpaketet ger dig årsmedlemsskap i föreningen samt 60 dagars labaccess till ett paketpris. Labaccessen börjar räknas efter uthämtad nyckel på en nyckelutlämning (se kalendarium för nästa tillfälle).</p>
-            <p><strong>Du måste vara minst 16 för att köp labbmedlemskap!</strong></p>
+            <p><strong>Du måste vara minst 16 för att köpa labbmedlemskap!</strong></p>
             <p>Du kan istället välja att köpa endast årsmedlemsskap i föreningen. Labaccess kan köpas separat i <a href="/shop">webshoppen</a>. Detta är något dyrare än paketpriset.</p>
 
             <div class="form-row">
