Update nag emails

--- a/api/src/multiaccess/templates/nag_email_expired.html
+++ b/api/src/multiaccess/templates/nag_email_expired.html
@@ -11,7 +11,7 @@
 
 The following message can be translated by Google Translate for those of you that do not understand Swedish. 
 
-Vi har precis gått igenom alla labblådor i lokalen och du har en labblåda i lokalen utan att ha ett aktivt labbmedlemskap. Vi har ingen möjlighet att lagra labblådor åt icke aktiva medlemmar eftersom att vi hela tiden får nya aktiva medlemmar som behöver plats för sina projekt. Vi ber dig därför göra en av följande saker innan {{ terminate_date }}:
+Vi har precis gått igenom alla labblådor i lokalen och du har en labblåda i lokalen utan att ha ett aktivt labbmedlemskap. Vi har ingen möjlighet att lagra labblådor åt icke aktiva medlemmar eftersom att vi hela tiden får nya aktiva medlemmar som behöver plats för sina projekt. Vi ber dig därför göra en av följande saker inom 2 veckor:
 
 <ul>
     <li>Förnya ditt labbmedlemskap i <a href="https://medlem.makerspace.se/shop">webshoppen</a>.</li>
@@ -20,6 +20,6 @@ Vi har precis gått igenom alla labblådor i lokalen och du har en labblåda i l
 
 Enligt det gällande labbmedlemsavtalet så har en labbmedlem 45 dagar på sig efter att labbmedlemstiden löpt ut för att hämta sin låda, efter denna tid tillfaller låda med innehåll föreningen. Din labaccess gick ut {{labaccess_end_date}}.
 
-Om du inte gjort någon av ovanstående aktiviteter innan {{terminate_date}} tillfaller lådan och innehållet föreningen, vilket kan innebära att innehållet kastas. 
+Om du inte gjort någon av ovanstående aktiviteter inom 2 veckor tillfaller lådan och innehållet föreningen, vilket kan innebära att innehållet kastas.
     </td>
 </table>
