--- a/api/src/templates/receipt_email.html
+++ b/api/src/templates/receipt_email.html
@@ -1,7 +1,8 @@
 <table width="400px" border="0" cellspacing="0" cellpadding="0" style="margin-left: auto; margin-right: auto;">
     <tr>
         <td align="center" colspan="3">
-            <img style="margin-bottom: 15px;" width=200px src="https://www.makerspace.se/wp-content/uploads/2015/06/logo-transparent-500px-300x210.png" />
+            <img style="margin-bottom: 15px;" width=200px
+                 src="https://www.makerspace.se/wp-content/uploads/2015/06/logo-transparent-500px-300x210.png"/>
         </td>
     </tr>
     <tr>
@@ -10,17 +11,17 @@
         </td>
     </tr>
     {% for product, cartItem in cart %}
-        <tr>
-            <td align="left">
-                {{ product.name }}
-            </td>
-            <td align="right">
-                {{ cartItem.count }} {{ product.unit }}
-            </td>
-            <td align="right">
-                {{ cartItem.amount }} {{ currency }}
-            </td>
-        </tr>
+    <tr>
+        <td align="left">
+            {{ product.name }}
+        </td>
+        <td align="right">
+            {{ cartItem.count }} {{ product.unit }}
+        </td>
+        <td align="right">
+            {{ cartItem.amount }} {{ currency }}
+        </td>
+    </tr>
     {% endfor %}
     <tr>
         <td align="right" style="font-size: 16pt;" colspan="3">
@@ -29,21 +30,25 @@
     </tr>
     <tr>
         <td align="center" colspan="3">
-          <p>Kvittonummer: {{ transaction.id }}. <a href='{{ public_url("/shop/receipt/" + (transaction.id|string)) }}'>Se detta kvitto på nätet</a>.<br>
-          (Receipt number above, click to see your receipt online).</p>
+            <p>Kvittonummer: {{ transaction.id }}. <a
+                    href='{{ public_url("/shop/receipt/" + (transaction.id|string)) }}'>Se detta kvitto på
+                nätet</a>.<br>
+                (Receipt number above, click to see your receipt online).</p>
 
-          <p>Stockholm Makerspace - Drottning Kristinas väg 53, 114 28 Stockholm</p>
+            <p>Stockholm Makerspace - Drottning Kristinas väg 53, 114 28 Stockholm</p>
 
-          <p>Stockholm Makerspace är en ideell förening.<br>
-              Stockholm Makerspace is a non-profit organization.<br>
-              Org. Nummer: 802467-7026</p>
+            <p>Stockholm Makerspace är en ideell förening.<br>
+                Stockholm Makerspace is a non-profit organization.<br>
+                Org. Nummer: 802467-7026</p>
 
-          <p><a href="https://www.makerspace.se/" target="_blank">makerspace.se<br><br>
-            <a href="https://www.facebook.com/groups/makerspace.se" target="_blank">Facebook</a><br>
-            <a href="https://www.makerspace.se/medlemskap" target="_blank">Info om medlemskap</a> / <a href="https://www.makerspace.se/membership" target="_blank">Info about membership</a><br>
-            <a href="https://www.makerspace.se/kalendarium" target="_blank">Kalendariet/Calendar<br>
-            <a href="https://wiki.makerspace.se/Makerspace_FAQ" target="_blank">Allmän Q&A </a>/ <a href="https://wiki.makerspace.se/Makerspace_FAQ,_English" target="_blank">General FAQ</a>
-          </p>
+            <p><a href="https://www.makerspace.se/" target="_blank">makerspace.se<br><br>
+                <a href="https://www.facebook.com/groups/makerspace.se" target="_blank">Facebook</a><br>
+                <a href="https://www.makerspace.se/medlemskap" target="_blank">Info om medlemskap</a> / <a
+                        href="https://www.makerspace.se/membership" target="_blank">Info about membership</a><br>
+                <a href="https://www.makerspace.se/kalendarium" target="_blank">Kalendariet/Calendar<br>
+                    <a href="https://wiki.makerspace.se/Makerspace_FAQ" target="_blank">Allmän Q&A </a>/ <a
+                            href="https://wiki.makerspace.se/Makerspace_FAQ,_English" target="_blank">General FAQ</a>
+            </p>
         </td>
     </tr>
 </table>
