#98 Implemented sending of labaccess reminder.

--- a/api/src/templates/labaccess_reminder.body.jinja2
+++ b/api/src/templates/labaccess_reminder.body.jinja2
@@ -11,7 +11,7 @@
             <p>
                 Om du vill fortsätta ha tillgång till Stockholms största kollektiva verkstad efter {{ expiration_date }}
                 så är det dags att förnya ditt labbmedlemskap i vår
-                <a href="{{ shop_url }}">webshop</a>.
+                <a href="{{ get_public_url('/shop') }}">webshop</a>.
             </p>
             <p>
                 Om du inte tänkt att förnya ditt labbmedlemskap så kom ihåg att hämta din labblåda och din eventuella
@@ -29,7 +29,7 @@
             <p>
                 If you want to continue to have access to Stockholm's largest collective workshop after
                 {{ expiration_date }}, it is time to renew your lab membership in our
-                <a href="{{ shop_url }}">webshop</a>.
+                <a href="{{ get_public_url('/shop') }}">webshop</a>.
             </p>
             <p>
                 If you do not intend to renew your lab membership, then remember to retrieve your lab storage box and
