--- a/api/src/templates/labaccess_reminder.body.html
+++ b/api/src/templates/labaccess_reminder.body.html
@@ -1,48 +1,41 @@
-<table width="600px" border="0" cellspacing="0" cellpadding="0" style="margin-left: auto; margin-right: auto;">
-    <tr>
-        <td align="center">
-            <img style="margin-bottom: 15px;" width=200px src="https://www.makerspace.se/wp-content/uploads/2015/06/logo-transparent-500px-300x210.png" />
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <p>Hej {{ member.firstname }},</p>
-            <p>(See below for English).</p>
-            <p>
-                Om du vill fortsätta ha tillgång till Stockholms största kollektiva verkstad efter {{ expiration_date }}
-                så är det dags att förnya ditt labbmedlemskap i vår
-                <a href="{{ public_url('/shop') }}">webshop</a>.
-            </p>
-            <p>
-                Om du inte tänkt att förnya ditt labbmedlemskap så kom ihåg att hämta din labblåda och din eventuella
-                temporära projektförvaring från lokalen innan labbmedlemskapet löper ut. Enligt gällande
-                labbmedlemsavtal tillfaller labblådan och dess innehåll föreningen 45 dagar efter att labbmedlemskapet
-                löpt ut.
-            </p>
-            <p>
-                Om du inte tänkt förnya ditt labbmedlemskap så är vi nyfikna på att veta varför, skriv en rad eller två
-                till <a href="mailto:info@makerspace.se">info@makerspace.se</a>.
-            </p>
-            <p>Med vänliga hälsningar,</p>
-            <p>Stockholm Makerspace</p>
+{% extends "email_body_base.html" %}
 
-            <p>
-                If you want to continue to have access to Stockholm's largest collective workshop after
-                {{ expiration_date }}, it is time to renew your lab membership in our
-                <a href="{{ public_url('/shop') }}">webshop</a>.
-            </p>
-            <p>
-                If you do not intend to renew your lab membership, then remember to retrieve your lab storage box and
-                your any temporary project storage from the premises before your lab membership expires. According to
-                current lab member agreement, the lab storage box and its contents belong to Stockholm Makerspace
-                from 45 days after your lab membership expires.
-            </p>
-            <p>
-                If you are not going to renew your lab membership, we are curious to know why. Please write a line
-                or two to <a href="mailto:info@makerspace.se">info@makerspace.se</a>.
-            </p>
-            <p>Sincerely,</p>
-            <p>Stockholm Makerspace</p>
-        </td>
-    </tr>
-</table>
+{% block swedish %}
+    <p>Hej {{ member.firstname }},</p>
+    <p>(See below for English).</p>
+    <p>
+        Om du vill fortsätta ha tillgång till Stockholms största kollektiva verkstad efter {{ expiration_date }}
+        så är det dags att förnya ditt labbmedlemskap i vår
+        <a href="{{ public_url('/shop') }}">webshop</a>.
+    </p>
+    <p>
+        Om du inte tänkt att förnya ditt labbmedlemskap så kom ihåg att hämta din labblåda och din eventuella
+        temporära projektförvaring från lokalen innan labbmedlemskapet löper ut. Enligt gällande
+        labbmedlemsavtal tillfaller labblådan och dess innehåll föreningen 45 dagar efter att labbmedlemskapet
+        löpt ut.
+    </p>
+    <p>
+        Om du inte tänkt förnya ditt labbmedlemskap så är vi nyfikna på att veta varför, skriv en rad eller två
+        till <a href="mailto:info@makerspace.se">info@makerspace.se</a>.
+    </p>
+    <p>Med vänliga hälsningar,<br/>Stockholm Makerspace</p>
+{% endblock %}
+
+{% block english %}
+    <p>
+        If you want to continue to have access to Stockholm's largest collective workshop after
+        {{ expiration_date }}, it is time to renew your lab membership in our
+        <a href="{{ public_url('/shop') }}">webshop</a>.
+    </p>
+    <p>
+        If you do not intend to renew your lab membership, then remember to retrieve your lab storage box and
+        your any temporary project storage from the premises before your lab membership expires. According to
+        current lab member agreement, the lab storage box and its contents belong to Stockholm Makerspace
+        from 45 days after your lab membership expires.
+    </p>
+    <p>
+        If you are not going to renew your lab membership, we are curious to know why. Please write a line
+        or two to <a href="mailto:info@makerspace.se">info@makerspace.se</a>.
+    </p>
+    <p>Sincerely,<br/>Stockholm Makerspace</p>
+{% endblock %}
