--- a/api/src/templates/email_body_base.html
+++ b/api/src/templates/email_body_base.html
@@ -4,8 +4,11 @@
     </p>
     {% block swedish %}
     {% endblock %}
+    {% block separator %}
     <br/>
+    ----------------------------------------------------------------------------
     <br/>
+    {% endblock %}
     {% block english %}
     {% endblock %}
 </div>
