--- a/api/src/templates/new_member.body.html
+++ b/api/src/templates/new_member.body.html
@@ -1,52 +1,46 @@
-<center>
-    <table bgcolor="#F1F1F1" width="600px" border="0" cellspacing="0" cellpadding="0" style="margin-left: auto; margin-right: auto; border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; text-align:left; margin:0; padding:0; width:100% !important; background-color:#F1F1F1; max-width:600px; min-width:320px; width="100% !important;">
-    <tr>
-        <td align="center">
-            <img style="margin:15px;" width=200px src="https://www.makerspace.se/wp-content/uploads/2015/06/logo-transparent-500px-300x210.png" />
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <h1>Hej {{member.firstname}},</h1>
-            <p style="font-size: small;"><em>(For information in ENGLISH, see below the dashed line).</em></p>
+{% extends "email_body_base.html" %}
 
-            <p>
-                Välkommen till Stockholm Makerspace! Du är nu del av Sveriges största självständiga Makerspace. Tillsammans hjälps vi åt att förbli en självständig och medlems-driven teknisk fristad för gemenskap och skapande.</p>
+{% block swedish %}
+<h1>Hej {{member.firstname}},</h1>
+<p style="font-size: small;"><em>(For information in ENGLISH, see below the dashed line).</em></p>
 
-            <p>Allt i Stockholm Makerspace är byggt, köpt, dit-kört och renoverat av medlemmar som du och jag. Ingen får lön och vi får inga bidrag. Orsaken till att vi kan betala hyran är att vi är många som hjälps åt genom att betala medlemsskap. Det är fantastiskt vad medborgare kan skapa tillsammans. Om du tycker att det finns något som kan utvecklas så är du varmt välkommen att engagera dig i driften av vår förening.
-            </p>
+<p>
+    Välkommen till Stockholm Makerspace! Du är nu del av Sveriges största självständiga Makerspace. Tillsammans hjälps vi åt att förbli en självständig och medlems-driven teknisk fristad för gemenskap och skapande.</p>
 
-            <p>
-                Vi vet av erfarenhet att du, som ny medlem, har mängder av frågor om Stockholm Makerspace. I detta mail hittar du den information du behöver för att själv kunna hitta svaren på alla dina frågor och funderingar, så läs mailet noga!
-            </p>
+<p>Allt i Stockholm Makerspace är byggt, köpt, dit-kört och renoverat av medlemmar som du och jag. Ingen får lön och vi får inga bidrag. Orsaken till att vi kan betala hyran är att vi är många som hjälps åt genom att betala medlemsskap. Det är fantastiskt vad medborgare kan skapa tillsammans. Om du tycker att det finns något som kan utvecklas så är du varmt välkommen att engagera dig i driften av vår förening.
+</p>
 
-            <h3>Medlemsinformation</h3>
-            <p>Namn: <i>{{member.firstname}} {{member.lastname}}</i><br/>
-                Email: <i>{{member.email}}</i><br/>
-                Medlemsnummer: <i>{{member.member_number}}</i><br/>
-            </p>
+<p>
+    Vi vet av erfarenhet att du, som ny medlem, har mängder av frågor om Stockholm Makerspace. I detta mail hittar du den information du behöver för att själv kunna hitta svaren på alla dina frågor och funderingar, så läs mailet noga!
+</p>
 
-            <p>
-                Om föreningen behöver nå dig så använder vi den här emailen. Det är därför viktigt att du tar ansvar för att den här e-mailadressen fungerar, eller anmäler ny email. Medlemsnummret används för vår interna organisation och du kommer att behöva det för att anmäla dig till våra kurser.
-            </p>
+<h3>Medlemsinformation</h3>
+<p>Namn: <i>{{member.firstname}} {{member.lastname}}</i><br/>
+    Email: <i>{{member.email}}</i><br/>
+    Medlemsnummer: <i>{{member.member_number}}</i><br/>
+</p>
 
-            <h3>TVÅ TYPER AV MEDLEMSKAP</h3>
-            <p>
-                <b>Grundmedlem</b><br/>
-                Som medlem i föreningen så är du välkommen på kurser och workhops som vi arrangerar, samt årsmötet. Vill du utföra självständigt arbete i lokalen så ska du bli labbmedlem.
-            </p>
+<p>
+    Om föreningen behöver nå dig så använder vi den här emailen. Det är därför viktigt att du tar ansvar för att den här e-mailadressen fungerar, eller anmäler ny email. Medlemsnummret används för vår interna organisation och du kommer att behöva det för att anmäla dig till våra kurser.
+</p>
 
-            <p>
-                <b>Labbmedlem</b><br/>
-                För labbmedlemmar så är lokalen öppen dygnet runt, året runt, men för att komma in första gången så måste du kvittera ut en nyckel. Nyckelutlämningar äger rum ungefär varannan vecka, och datum hittar du i vårt kalendarium (<a href="https://makerspace.se/kalendarium">makerspace.se/kalendarium</a>). För att kvittera ut en nyckel måste du skriva under ett avtal där du ålägger dig att följa våra lokalregler (<a href="https://wiki.makerspace.se/Lokalregler">wiki.makerspace.se/Lokalregler</a>), samt visa ID.
-            </p>
+<h3>TVÅ TYPER AV MEDLEMSKAP</h3>
+<p>
+    <b>Grundmedlem</b><br/>
+    Som medlem i föreningen så är du välkommen på kurser och workhops som vi arrangerar, samt årsmötet. Vill du utföra självständigt arbete i lokalen så ska du bli labbmedlem.
+</p>
 
-            <h3>Jag vill gå kurs! När är det kurs?</h3>
-            <p>All verksamhet bedrivs av volontärer, som du och jag. Vi hjälps åt att lära varandra maskinerna så att alla kan utföra självständigt arbete. Man delar vad man kan, och ber om hjälp om man kör fast. Några saker måste man gå kurs för att kunna använda: svets, biolabb, laserskäraren och resin-printern. Kurser annonseras i Facebookgruppen och läggs in i kalendern. Det finns ingen kö, först till kvarn gäller.
-            </p>
+<p>
+    <b>Labbmedlem</b><br/>
+    För labbmedlemmar så är lokalen öppen dygnet runt, året runt, men för att komma in första gången så måste du kvittera ut en nyckel. Nyckelutlämningar äger rum ungefär varannan vecka, och datum hittar du i vårt kalendarium (<a href="https://makerspace.se/kalendarium">makerspace.se/kalendarium</a>). För att kvittera ut en nyckel måste du skriva under ett avtal där du ålägger dig att följa våra lokalregler (<a href="https://wiki.makerspace.se/Lokalregler">wiki.makerspace.se/Lokalregler</a>), samt visa ID.
+</p>
 
-            <h3>Jag är jätteduktig på en sak. Får jag hålla kurs i saken?</h3>
-            <p>Absolut! Emaila styrelsen på <a href="mailto:info@makerspace.se">info@makerspace.se</a> så pratar vi upplägg, anmälan och sätter in kursen i kalendariet. Kanske kolla av intresse genom att posta om saken i Facebookgruppen först?</p>
+<h3>Jag vill gå kurs! När är det kurs?</h3>
+<p>All verksamhet bedrivs av volontärer, som du och jag. Vi hjälps åt att lära varandra maskinerna så att alla kan utföra självständigt arbete. Man delar vad man kan, och ber om hjälp om man kör fast. Några saker måste man gå kurs för att kunna använda: svets, biolabb, laserskäraren och resin-printern. Kurser annonseras i Facebookgruppen och läggs in i kalendern. Det finns ingen kö, först till kvarn gäller.
+</p>
+
+<h3>Jag är jätteduktig på en sak. Får jag hålla kurs i saken?</h3>
+<p>Absolut! Emaila styrelsen på <a href="mailto:info@makerspace.se">info@makerspace.se</a> så pratar vi upplägg, anmälan och sätter in kursen i kalendariet. Kanske kolla av intresse genom att posta om saken i Facebookgruppen först?</p>
 
 <h3>Mitt labbmedlemskap håller på att ta slut, måste jag komma förbi igen och aktivera taggen?</h3>
 <p>Nej. Har du redan tagg så behöver du inte infinna dig på spacet. Vi hanterar uppdateringen av din tagg per distans.</p>
@@ -81,26 +75,27 @@
 
 <h3>Ok. Var får jag reda på mer?</h3>
 <ul>
-<li>Vår <a href="http://fb.com/groups/makerspace.se/">Facebook-grupp för medlemmar</a> är väldigt aktiv. Där ställer man frågor, hittar hjälp och får info om kurser.</li>
-<li>Biolabbet har sin egen <a href="http://fb.com/groups/1540165512945860/">Facebook-grupp</a>.</li>
-<li>I <a href="https://www.makerspace.se/kalendarium">Kalendariet</a> ser du events och nyckelutlämningar.</li>
-<li>Vi skickar ut ett "Nyhetsbrev" till alla medlemmars email (utkommer sporadiskt). De finns även att läsa på <a href="https://www.makerspace.se/blogg">hemsidans blogg</a>.</li>
-<li><a href="https://www.makerspace.se/">Hemsidan</a> innehåller länkar, blogg och info.</li>
-<li><a href="https://wiki.makerspace.se">Wikin</a> innehåller mycket, till ex <a href="https://wiki.makerspace.se/Makerspace_FAQ">Makerspace FAQ</a> (allmäna frågor & svar), och <a href="https://wiki.makerspace.se/Maskiner_och_inventarier">Maskiner och inventarier</a> (lista över inventarier) samt hjälp och info per maskin (exempelvis vilka parametrar du behöver per material i laserskäraren).</li>
-<li>Köp saker i vår <a href="https://medlem.makerspace.se/shop/">webbshop</a> (ladda på medlemskap, köp material, betala laser-tid, osv)</li>
-<li><a href="https://boka.se/laser">Boka laserskäraren</a></li>
-<li><a href="https://wiki.makerspace.se/Slack">Slack</a> med flera kanaler, inkl Events, Trärummet och vissa maskiner.</li>
-<li>Publik <a href="http://fb.com/Stockholm.Makerspace">Facebook-sidan</a> (används inte så mycket).
-<li>Frågor direkt till styrelsen skickas till <a href="mailto:info@makerspace.se">info@makerspace.se</a>.</li>
+    <li>Vår <a href="http://fb.com/groups/makerspace.se/">Facebook-grupp för medlemmar</a> är väldigt aktiv. Där ställer man frågor, hittar hjälp och får info om kurser.</li>
+    <li>Biolabbet har sin egen <a href="http://fb.com/groups/1540165512945860/">Facebook-grupp</a>.</li>
+    <li>I <a href="https://www.makerspace.se/kalendarium">Kalendariet</a> ser du events och nyckelutlämningar.</li>
+    <li>Vi skickar ut ett "Nyhetsbrev" till alla medlemmars email (utkommer sporadiskt). De finns även att läsa på <a href="https://www.makerspace.se/blogg">hemsidans blogg</a>.</li>
+    <li><a href="https://www.makerspace.se/">Hemsidan</a> innehåller länkar, blogg och info.</li>
+    <li><a href="https://wiki.makerspace.se">Wikin</a> innehåller mycket, till ex <a href="https://wiki.makerspace.se/Makerspace_FAQ">Makerspace FAQ</a> (allmäna frågor & svar), och <a href="https://wiki.makerspace.se/Maskiner_och_inventarier">Maskiner och inventarier</a> (lista över inventarier) samt hjälp och info per maskin (exempelvis vilka parametrar du behöver per material i laserskäraren).</li>
+    <li>Köp saker i vår <a href="https://medlem.makerspace.se/shop/">webbshop</a> (ladda på medlemskap, köp material, betala laser-tid, osv)</li>
+    <li><a href="https://boka.se/laser">Boka laserskäraren</a></li>
+    <li><a href="https://wiki.makerspace.se/Slack">Slack</a> med flera kanaler, inkl Events, Trärummet och vissa maskiner.</li>
+    <li>Publik <a href="http://fb.com/Stockholm.Makerspace">Facebook-sidan</a> (används inte så mycket).
+    <li>Frågor direkt till styrelsen skickas till <a href="mailto:info@makerspace.se">info@makerspace.se</a>.</li>
 </ul>
 
 <p>
-Bästa hälsningar,<br/>
-Styrelsen i Stockholm Makerspace<br/>
-<a href="https://www.makerspace.se/">www.makerspace.se</a>
+    Bästa hälsningar,<br/>
+    Styrelsen i Stockholm Makerspace<br/>
+    <a href="https://www.makerspace.se/">www.makerspace.se</a>
 </p>
+{% endblock %}
 
-----------------------------------------------------------------------------
+{% block english %}
 
 <p>ENGLISH</p>
 
@@ -113,18 +108,18 @@ Styrelsen i Stockholm Makerspace<br/>
 
 <h3>Member info</h3>
 <p>Name: {{member.firstname}} {{member.lastname}}<br/>
-Email: {{member.email}}<br/>
-Membership number: {{member.member_number}}<br/>
+    Email: {{member.email}}<br/>
+    Membership number: {{member.member_number}}<br/>
 </p>
 
 <p>We’ll use this email if we need to reach you. Therefore it’s important that you ensure that it works, or notify us regarding new email info. Your membership number is used for our database, and you’ll need it to sign up for courses and workshops.</p>
 
 <h3>TWO TYPES OF MEMBERSHIP</h3>
 <p><b>Base membership</b><br/>
-As a member in the organisation you’re welcome to attend our events and workshops, as well as vote at the annual meeting. If you wish to do independent projects on your own on the premises, you need to become a lab member.</p>
+    As a member in the organisation you’re welcome to attend our events and workshops, as well as vote at the annual meeting. If you wish to do independent projects on your own on the premises, you need to become a lab member.</p>
 
 <p><b>Lab membership</b><br/>
-The premises are open 24/7 for lab members, all year long, but to start gaining access you need to get a key fob. Key handouts occur approximately every two weeks, and they’re called "nyckelutlämning" in our calendar (<a href="https://makerspace.se/kalendarium">makerspace.se/kalendarium</a>). To check out a key you need to sign an agreement where you agree to adhere to our rules (<a href="https://wiki.makerspace.se/Rules_for_Makerspace">wiki.makerspace.se/Rules_for_Makerspace</a>), and you also need to show an ID.</p>
+    The premises are open 24/7 for lab members, all year long, but to start gaining access you need to get a key fob. Key handouts occur approximately every two weeks, and they’re called "nyckelutlämning" in our calendar (<a href="https://makerspace.se/kalendarium">makerspace.se/kalendarium</a>). To check out a key you need to sign an agreement where you agree to adhere to our rules (<a href="https://wiki.makerspace.se/Rules_for_Makerspace">wiki.makerspace.se/Rules_for_Makerspace</a>), and you also need to show an ID.</p>
 
 <h3>I want to go to a workshop! When is the next workshop?</h3>
 <p>All activities are run by volunteers, like you and me. We help each other learn the machines so that everyone can work independently. Share what you can, and ask for help if you get stuck. Some machines require that you have gone to a course for in order to be able to use: welding (svetsrummet), biolab, laser cutter, and resin printer. Courses are advertised in the Facebook group and can be found on the calendar. There is no queue- first come, first served.</p>
@@ -165,25 +160,23 @@ The premises are open 24/7 for lab members, all year long, but to start gaining 
 
 <h3>Ok. Where can I find out more?</h3>
 <ul>
-<li>Our <a href="http://fb.com/groups/makerspace.se/">Facebook group for members</a> is very active. There you can ask questions, ask for help, and get info about workshops.</li>
-<li>The Biolab has its own <a href="http://fb.com/groups/1540165512945860/">Facebook group</a>.</li>
-<li>In the <a href="https://www.makerspace.se/kalendarium">Calendar</a> you can see the upcoming events and "nyckelutlämningar".</li>
-<li>We send out a newsletter ("Nyhetsbrev") to every members' email (sent sporadically). You can even read these on the <a href="https://www.makerspace.se/blogg">homepage's blog</a>.</li>
-<li><a href="https://www.makerspace.se/">The homepage</a> has links, a blog, and other info.</li>
-<li><a href="https://wiki.makerspace.se">The Wiki</a> has lots of information, including <a href="https://wiki.makerspace.se/Makerspace_FAQ,_English">Makerspace FAQ</a> (frequently asked questions and answers), and <a href="https://wiki.makerspace.se/Maskiner_och_inventarier">Maskiner och inventarier</a> (a list of the tools and equipment), as well as help for each machine (like what parameters you need for different materials in the laser cutter).</li>
-<li>Buy things in our <a href="https://medlem.makerspace.se/shop/">webshop</a> (renew memberships, buy material, pay for laser cutter time, etc).</li>
-<li><a href="https://boka.se/laser">Book time on the laser cutter</a></li>
-<li><a href="https://wiki.makerspace.se/Slack">Slack</a> with several channels, including Events, Trärummet and certain machines.</li>
-<li>Public <a href="http://fb.com/Stockholm.Makerspace">Facebook page</a> (not used much).
-<li>Question for the Board can be sent directly to <a href="mailto:info@makerspace.se">info@makerspace.se</a>.</li>
+    <li>Our <a href="http://fb.com/groups/makerspace.se/">Facebook group for members</a> is very active. There you can ask questions, ask for help, and get info about workshops.</li>
+    <li>The Biolab has its own <a href="http://fb.com/groups/1540165512945860/">Facebook group</a>.</li>
+    <li>In the <a href="https://www.makerspace.se/kalendarium">Calendar</a> you can see the upcoming events and "nyckelutlämningar".</li>
+    <li>We send out a newsletter ("Nyhetsbrev") to every members' email (sent sporadically). You can even read these on the <a href="https://www.makerspace.se/blogg">homepage's blog</a>.</li>
+    <li><a href="https://www.makerspace.se/">The homepage</a> has links, a blog, and other info.</li>
+    <li><a href="https://wiki.makerspace.se">The Wiki</a> has lots of information, including <a href="https://wiki.makerspace.se/Makerspace_FAQ,_English">Makerspace FAQ</a> (frequently asked questions and answers), and <a href="https://wiki.makerspace.se/Maskiner_och_inventarier">Maskiner och inventarier</a> (a list of the tools and equipment), as well as help for each machine (like what parameters you need for different materials in the laser cutter).</li>
+    <li>Buy things in our <a href="https://medlem.makerspace.se/shop/">webshop</a> (renew memberships, buy material, pay for laser cutter time, etc).</li>
+    <li><a href="https://boka.se/laser">Book time on the laser cutter</a></li>
+    <li><a href="https://wiki.makerspace.se/Slack">Slack</a> with several channels, including Events, Trärummet and certain machines.</li>
+    <li>Public <a href="http://fb.com/Stockholm.Makerspace">Facebook page</a> (not used much).
+    <li>Question for the Board can be sent directly to <a href="mailto:info@makerspace.se">info@makerspace.se</a>.</li>
 </ul>
 
 <p>
-Best regards,<br/>
-The Board of Stockholm Makerspace<br/>
-<a href="https://www.makerspace.se/">www.makerspace.se</a>
+    Best regards,<br/>
+    The Board of Stockholm Makerspace<br/>
+    <a href="https://www.makerspace.se/">www.makerspace.se</a>
 </p>
-        </td>
-    </tr>
-</table>
-</center>
+{% endblock %}
+
