--- a/api/src/templates/box_terminated.body.html
+++ b/api/src/templates/box_terminated.body.html
@@ -5,7 +5,7 @@
 <p>(See below for English).</p>
 <p>
   Ditt labbmedlemskap i Stockholm Makerspace gick ut den {{labaccess_end_date}}, det har gått
-  {{expired_days}} dagar sedan att ditt labbmedlemskap gått ut vilket innebär att din låda och
+  {{days_after_expiration}} dagar sedan att ditt labbmedlemskap gått ut vilket innebär att din låda och
   dess innehåll nu tillfallit föreningen i enlighet med gällande labbmedlemsavtal.
 </p>
 <p>
@@ -19,7 +19,7 @@
 <h2>Hi {{member.firstname}}</h2>
 <p>
   Your lab membership in Stockholm Makerspace expired on {{labaccess_end_date}}, you have not had an active
-  lab membership for {{expired_days}} days which means that your lab storage box and all of its
+  lab membership for {{days_after_expiration}} days which means that your lab storage box and all of its
   contents now belong to the Stockholm Makerspace according to the lab membership agreement.
 </p>
 <p>
